WIP: Legger til nye endepunkter
