# src/main/resources/openapi/documentation.yaml
@@ -35,6 +35,26 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/ArbeidssoekerperiodeResponse"
+  /api/v1/opplysninger-om-arbeidssoeker:
+    get:
+      description: ""
+      security:
+        - TokenXAuth: []
+      responses:
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "200":
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/OpplysningerOmArbeidssoekerResponse"
   /api/v1/opplysninger-om-arbeidssoeker/{periodeId}:
     get:
       description: ""
@@ -61,6 +81,26 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/OpplysningerOmArbeidssoekerResponse"
+  /api/v1/profilering:
+    get:
+      description: ""
+      security:
+        - TokenXAuth: []
+      responses:
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "200":
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/ProfileringResponse"
   /api/v1/profilering/{periodeId}:
     get:
       description: ""
@@ -87,11 +127,42 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/ProfileringResponse"
+  /api/v1/samlet-informasjon:
+    get:
+      description: "Henter samlet informasjon om arbeidssøkerperioder, opplysninger og profilering."
+      security:
+        - TokenXAuth: []
+      parameters:
+        - name: "siste"
+          in: "query"
+          required: false
+          schema:
+            type: "boolean"
+          description: "Hvis true, henter bare den siste periode, opplysninger og profilering."
+      responses:
+        "403":
+          description: "Forbidden"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "200":
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SamletInformasjonResponse"
   /api/v1/veileder/arbeidssoekerperioder:
     post:
       description: ""
       security:
-        - AzureAuth: [ ]
+        - AzureAuth: []
       requestBody:
         content:
           application/json:
@@ -183,6 +254,43 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/ProfileringResponse"
+  /api/v1/veileder/samlet-informasjon:
+    post:
+      description: "Veileder henter samlet informasjon om arbeidssøkerperioder, opplysninger og profilering."
+      security:
+        - AzureAuth: []
+      parameters:
+        - name: "siste"
+          in: "query"
+          required: false
+          schema:
+            type: "boolean"
+          description: "Hvis true, henter bare den siste periode, opplysninger og profilering."
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SamletInformasjonRequest"
+        required: true
+      responses:
+        "403":
+          description: "Forbidden"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "500":
+          description: "Internal Server Error"
+          content:
+            text/plain:
+              schema:
+                type: "string"
+        "200":
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/SamletInformasjonResponse"
   /internal/isAlive:
     get:
       description: ""
@@ -278,17 +386,17 @@ components:
         - "FORSINKELSE"
         - "RETTING"
     TidspunktFraKildeResponse:
-        type: "object"
-        properties:
-            tidspunkt:
-              type: "string"
-              format: "date-time"
-              example: "2021-09-29T11:20:33.444Z"
-            avviksType:
-              $ref: "#/components/schemas/AvviksTypeResponse"
-        required:
-            - "tidspunkt"
-            - "avviksType"
+      type: "object"
+      properties:
+        tidspunkt:
+          type: "string"
+          format: "date-time"
+          example: "2021-09-29T11:20:33.444Z"
+        avviksType:
+          $ref: "#/components/schemas/AvviksTypeResponse"
+      required:
+        - "tidspunkt"
+        - "avviksType"
     MetadataResponse:
       type: "object"
       properties:
@@ -412,6 +520,21 @@ components:
         - "opplysningerOmArbeidssoekerId"
         - "sendtInnAv"
         - "profilertTil"
+    SamletInformasjonResponse:
+      type: "object"
+      properties:
+        arbeidssoekerperioder:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/ArbeidssoekerperiodeResponse"
+        opplysningerOmArbeidssoeker:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/OpplysningerOmArbeidssoekerResponse"
+        profilering:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/ProfileringResponse"
     ArbeidssoekerperiodeRequest:
       type: "object"
       properties:
@@ -429,7 +552,6 @@ components:
           format: "uuid"
       required:
         - "identitetsnummer"
-        - "periodeId"
     ProfileringRequest:
       type: "object"
       properties:
@@ -440,7 +562,13 @@ components:
           format: "uuid"
       required:
         - "identitetsnummer"
-        - "periodeId"
+    SamletInformasjonRequest:
+      type: "object"
+      properties:
+        identitetsnummer:
+          type: "string"
+      required:
+        - "identitetsnummer"
     JaNeiVetIkke:
       type: "string"
       enum:
